--- a/app/src/main/res/layout/main_listview.xml
+++ b/app/src/main/res/layout/main_listview.xml
@@ -4,16 +4,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/startstopbutton"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end"
+        android:layout_height="match_parent"
         android:layout_marginHorizontal="@dimen/viewMarginSmall"
-        android:onClick="startStopTapped"
-        android:text="START"
-        android:textColor="@color/green"
-        android:textSize="@dimen/small_font_size" />
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/startstopbutton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:minWidth="70dp"
+            android:minHeight="40dp"
+            android:shadowRadius="5"
+            android:text="START"
+            android:textColor="@color/green" />
+
+        <TextView
+            android:id="@id/time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="01:59:59"></TextView>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,8 +48,7 @@
                 android:text="할일:"
                 android:textColor="@color/black"
                 android:textSize="@dimen/small_font_size"
-                android:textStyle="bold"
-                />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/todo"
@@ -44,8 +57,8 @@
                 android:layout_weight="1"
                 android:text="~"
                 android:textColor="@color/colorPrimaryDark"
-                android:textStyle="bold"
-                android:textSize="@dimen/small_font_size" />
+                android:textSize="@dimen/small_font_size"
+                android:textStyle="bold" />
 
             <View
                 android:layout_width="0dp"
@@ -70,14 +83,14 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/time"
+                android:id="@+id/estimatedTime"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="~"
                 android:textColor="@color/colorPrimaryDark"
-                android:textStyle="bold"
-                android:textSize="@dimen/small_font_size" />
+                android:textSize="@dimen/small_font_size"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textView16"
@@ -94,10 +107,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textColor="@color/colorPrimaryDark"
-                android:textStyle="bold"
                 android:text="~"
-                android:textSize="@dimen/small_font_size" />
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="@dimen/small_font_size"
+                android:textStyle="bold" />
         </LinearLayout>
     </LinearLayout>
 
